   NOTE: This file was automatically generated by `cvs2cl.pl'.  If you
   edit this file, your changes will be lost when someone next runs
   cvs2cl.pl.  See http://www.red-bean.com/~kfogel/cvs2cl.shtml for more.
  -+- -+- -+- -+- -+- -+- -+- -+- -+- -+- -+- -+- -+- -+- -+- -+- -+- -+-

2004-01-22 12:42  vfcrescini  <jcrescin@cit.uws.edu.au>

	* wmclock.c :

	  - Year is now properly displayed with the -year option.

	  - When for some reason the options -year and -12 are both present,
	    year is properly displayed.

2000-04-13 07:49  jmknoble

	* wmclock.spec.in: Add ChangeLog to %%doc directory.

	* Imakefile: Bump version to 1.0.12.2.	Release.

	* Imakefile: Generate changelog from CVS comments with 'make
	changelog'.  Add generated changelog to distribution tarball.

2000-03-08 07:59  jmknoble

	* Imakefile: `tar' target was copying CVS directories. 
	Restructured it a bit to avoid that.

	* Imakefile: `distclean' target could prove troublesome by
	destroying irreproducible work.

	* wmclock.spec.in: Oops.  Missed an obsolete %%{ReleaseNum} macro.

2000-03-08 07:35  jmknoble

	* Imakefile, wmclock.spec.in: Added template from which to generate
	spec file (wmclock.spec.in).  Added targets in Imakefile to handle
	generating the spec file.  Revised `tar' target to rebuild on
	sourcefile change.  Added distclean target.  Removed symlinks from
	tarball.  Updated version to 1.0.12.1.

	* .cvsignore: Added .cvsignore file for convenience of the
	developer.

	* Makefile: Makefile is automagically generated; it shouldn't be
	stored in CVS.

	* wmclock.c, xpm/mask.xbm: Compiling with gcc -Wall -ansi -pedantic
	revealed that the mask bitmap should be declared as unsigned char. 
	XCreateBitmapFromData() expects char *, though, so we cast the mask
	bitmap data explicitly.

	* dynlist.c, dynlist.h: Fixed possible memory leak.

2000-03-08 06:56  jmknoble

	* COPYING, INSTALL, Imakefile, Makefile, README, configure,
	dynlist.c, dynlist.h, wmclock.c, wmclock.man.in,