@@ -1,5 +1,5 @@
 NAME		= wmclock
-VERSION		= 1.0.12.2-vino-1
+VERSION		= 1.0.12.2-vino-2
 DATE		= 2004-Jan-22
 
 MAKE_CHANGELOG	= cvs2cl
